--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,9 @@
 name: Publish
 
+permissions:
+  contents: write
+  id-token: write
+
 on:
   push:
     tags:
@@ -9,13 +13,12 @@ jobs:
   release:
     environment: Publish
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - uses: actions/setup-node@v4
         with:
