--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "sisteransi": "^1.0.5",
     "tar": "^7.4.3"
   },
   "devDependencies": {
@@ -52,7 +53,6 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
-    "prompts": "^2.4.2",
     "standard-version": "^9.5.0",
     "typescript": "^5.7.3"
   },
