--- a/.versionrc
+++ b/.versionrc
@@ -1,16 +1,16 @@
 {
   "header": "# 更新日志(Changelog):tada:\n\n**一款为开发者快速搭建 Arco 项目的命令行工具**",
   "types": [
-    { "type": "feat", "section": "### :sparkles: Features | 更新" },
-    { "type": "fix", "section": "### :bug: Bug | 修复" },
-    { "type": "docs", "section": "### :memo: Docs | 文档" },
-    { "type": "refactor", "section": "### :recycle: Refactoring | 重构" },
-    { "type": "perf", "section": "### :zap: Perf | 优化" },
-    { "type": "test", "section": "### :white_check_mark: Tests | 测试" },
-    { "type": "build", "section": "### :package: Build | 构建" },
-    { "type": "chore", "section": "### :rocket: Chore" },
-    { "type": "ci", "section": "### :gear: CI | 持续集成" },
-    { "type": "enhance", "section": "### :muscle: Enhance | 增强" }
+    { "type": "feat", "section": ":sparkles: Features | 更新" },
+    { "type": "fix", "section": ":bug: Bug | 修复" },
+    { "type": "docs", "section": ":memo: Docs | 文档" },
+    { "type": "refactor", "section": ":recycle: Refactoring | 重构" },
+    { "type": "perf", "section": ":zap: Perf | 优化" },
+    { "type": "test", "section": ":white_check_mark: Tests | 测试" },
+    { "type": "build", "section": ":package: Build | 构建" },
+    { "type": "chore", "section": ":rocket: Chore" },
+    { "type": "ci", "section": ":gear: CI | 持续集成" },
+    { "type": "enhance", "section": ":muscle: Enhance | 增强" }
   ],
   "tag-prefix": "v",
   "releaseCommitMessageFormat": "release: v{{currentTag}}",
