--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.2.3",
   "description": "A template to quickly initialize an Arco project",
   "author": "oljc <ljc.byte@gmail.com>",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "prepare": "husky",
+    "dev": "rslib build --watch",
+    "build": "rslib build",
+    "check": "tsc --noEmit",
     "format": "prettier --write .",
-    "dev": "node ./scripts/build.mjs --dev",
-    "build": "node ./scripts/build.mjs",
-    "start": "node dist/index.cjs",
+    "lint": "eslint .",
     "release": "pnpm run build && standard-version"
   },
   "files": [
@@ -19,7 +20,7 @@
     "LICENSE"
   ],
   "bin": {
-    "create-arco": "./dist/index.cjs"
+    "create-arco": "./dist/index.js"
   },
   "packageManager": "pnpm@9.15.3",
   "engines": {
@@ -48,18 +49,21 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@tsconfig/node22": "^22.0.0",
+    "@eslint/js": "^9.19.0",
+    "@rslib/core": "^0.3.2",
     "@types/node": "^22.10.5",
-    "esbuild": "^0.24.2",
+    "eslint": "^9.19.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "standard-version": "^9.5.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0"
   },
   "lint-staged": {
     "*.{js,ts,mjs}": [
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ]
   },
   "publishConfig": {
