feat: 优化国内环境请求超时问题

--- a/.github/ISSUE_TEMPLATE/ADD.yml
+++ b/.github/ISSUE_TEMPLATE/ADD.yml
@@ -1,8 +1,8 @@
 name: 新增模板项目
 description: 新增一个开源项目
-title: "[Add]: "
-labels: ["template"]
-projects: ["main"]
+title: '[Add]: '
+labels: ['template']
+projects: ['main']
 assignees:
   - oljc
 body:
